--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@ styles: [/webjars/bootstrap/3.1.1/css/bootstrap.css, style.less]
   <div>
     <ul>
     [[#each cars]]
-    <li>[[vendor]] - [[model]]</li>
+    <li>[[vendor]] - [[model]] - [[engineType]] [[#if hybride]] - Hybride [[/if]] - [[co2]] - [[consoMixte]]</li>
     [[/each]]
     </ul>
   </div>
